# aidog

./: .cache  .check_heartbeat.txt  .exec_heartbeat.txt  .gitignore  .venv  CHECK_REPORT.md  CLAUDE.md  IMPLEMENT_REPORT.md  Makefile  README.ar.md  README.de.md  README.en.md  README.es.md  README.fr.md  README.ja.md  README.md  README.ru.md  VERIFY_ARCHIVE_MERGE.txt  components.json  mise.toml  package.json  popover.html  tsconfig.test.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  libcheck_send.rlib  target  tauri.conf.json
src-tauri/.ci/: README.md  check-test-isolation.sh
src-tauri/capabilities/: default.json  mitm-ca.json
src-tauri/crates/aidog_core/: Cargo.toml
src-tauri/crates/aidog_core/src/: hooks.rs  lib.rs  logging.rs  shared.rs  sync_settings.rs  test_sync_settings.rs  tray_render.rs
src-tauri/crates/aidog_test_util/: Cargo.toml
src-tauri/crates/aidog_test_util/src/: lib.rs
src-tauri/crates/commands_ai_tools/: Cargo.toml
src-tauri/crates/commands_ai_tools/src/: coding_tools.rs  lib.rs  mcp.rs  model_test.rs  script_executor.rs  skills.rs  test_coding_tools.rs  test_mcp.rs  test_script_executor.rs
src-tauri/crates/commands_cli_env/: Cargo.toml
src-tauri/crates/commands_cli_env/src/: cli_env.rs  lib.rs
src-tauri/crates/commands_cli_proxy/: Cargo.toml
src-tauri/crates/commands_cli_proxy/src/: batch.rs  import.rs  lib.rs  platform.rs  provider.rs  test_cmd.rs
src-tauri/crates/commands_config/: Cargo.toml
src-tauri/crates/commands_config/src/: defaults.rs  lib.rs  settings.rs  test_hooks.rs  test_settings.rs
src-tauri/crates/commands_platform/: Cargo.toml
src-tauri/crates/commands_platform/src/: batch.rs  cpa_import.rs  group.rs  lib.rs  model_fetch.rs  platform.rs  price.rs  quota.rs  stats.rs  test_group.rs  test_platform.rs  test_price.rs  test_stats.rs  tray.rs  ui_extra.rs
src-tauri/crates/commands_proxy/: Cargo.toml
src-tauri/crates/commands_proxy/src/: lib.rs  middleware.rs  mitm.rs  proxy.rs  proxy_log.rs  proxy_timeout.rs  test_middleware.rs  test_proxy_log.rs  test_proxy_timeout.rs
src-tauri/crates/commands_system/: Cargo.toml  build.rs
src-tauri/crates/commands_system/src/: about.rs  app_log.rs  backup.rs  fs_autocomplete.rs  lib.rs  notification.rs  scheduling.rs  test_app_log.rs  test_auto_update.rs  test_backup.rs  test_notification.rs  test_scheduling.rs
src-tauri/crates/commands_tray/: Cargo.toml
src-tauri/crates/commands_tray/src/: lib.rs  popover.rs  test_popover.rs  tray.rs
src-tauri/defaults/: client-types.json  models.json  platform-presets.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_add_platform_models.sql  002_log_filter_indexes.sql  003_add_platform_available_models.sql  003_model_price.sql  004_add_settings.sql  004_platform_quota_estimate.sql  005_add_group_auto_from_platform.sql  005_proxy_log_est_cost.sql  006_proxy_log_is_stream.sql  006_slugify_group_names.sql  007_retry_failover.sql  008_model_info_columns.sql  009_drop_group_path.sql  010_group_key.sql  011_stats_agg_hourly.sql  012_proxy_log_is_final.sql
src-tauri/src/: app_setup.rs  commands.rs  deep_link.rs  lib.rs  logging.rs  main.rs  shared.rs  startup.rs
src-tauri/src/commands/: about.rs  app_log.rs  auto_update.rs  backup.rs  cli_env.rs  coding_tools.rs  defaults.rs  fs_autocomplete.rs  group.rs  hooks.rs  mcp.rs  middleware.rs  mitm.rs  model_fetch.rs  model_test.rs  notification.rs  platform.rs  popover.rs  price.rs  proxy.rs  proxy_log.rs  proxy_timeout.rs  quota.rs  scheduling.rs  script_executor.rs  settings.rs  skills.rs  stats.rs  sync_settings.rs  test_about.rs  test_app_log.rs  test_auto_update.rs  test_backup.rs  test_cli_env.rs  test_coding_tools.rs  test_fs_autocomplete.rs  test_group.rs  test_harness.rs  test_hooks.rs  test_mcp.rs  (+14 more)
src-tauri/src/gateway/: backup.rs  claude_integration.rs  codex.rs  coding_plan.rs  db.rs  defaults_sync.rs  estimate.rs  hooks.rs  http_client.rs  i18n.rs  log_util.rs  logo_sync.rs  manual_budget.rs  mcp.rs  middleware.rs  mod.rs  models.rs  notification.rs  peak_hours.rs  price_sync.rs  proxy.rs  quota.rs  router.rs  scheduling.rs  skills.rs  test_codex.rs  test_i18n.rs  time_models.rs  usage_color.rs
src-tauri/src/gateway/adapter/: CONVERSION_TODO.md  anthropic.rs  bailian.rs  claude_code.rs  codex.rs  converter.rs  gemini.rs  glm.rs  kimi.rs  minimax.rs  mock.rs  mod.rs  openai.rs  openai_completions.rs  openai_responses.rs  test_anthropic.rs  test_gemini.rs  test_openai_completions.rs  types.rs
src-tauri/src/gateway/backup/: cleanup.rs  test_cleanup.rs  test_mod.rs  test_scheduler.rs
src-tauri/src/gateway/db/: group.rs  group_platform.rs  maintenance.rs  mcp.rs  middleware.rs  mod.rs  model_price.rs  platform.rs  platform_lifecycle.rs  proxy_log.rs  query_stats.rs  schema.rs  schema_early.rs  schema_late.rs  settings.rs  stats_agg.rs  stats_today.rs  test_group.rs  test_group_platform.rs  test_maintenance.rs  test_mod.rs  test_model_price.rs  test_platform.rs  test_platform_lifecycle.rs  test_proxy_log.rs  test_query_stats.rs  test_rw_pool.rs  test_schema.rs  test_settings.rs  test_stats_agg.rs  test_stats_today.rs  test_support.rs  test_usage_stats.rs  tests_group.rs  tests_infra.rs  tests_platform.rs  tests_platform_lifecycle.rs  tests_proxy_log.rs  tests_schema.rs  tests_settings.rs  (+2 more)
src-tauri/src/gateway/estimate/: algo.rs  db_ops.rs  model.rs  test_algo.rs  test_db_ops.rs
src-tauri/src/gateway/hooks/: mod.rs  scripts.rs
src-tauri/src/gateway/import_export/: apply.rs  ccswitch.rs  collect.rs  container.rs  mod.rs  skills_sync.rs  sub2api.rs  test_collect.rs
src-tauri/src/gateway/mcp/: backend_claude.rs  backend_codex.rs  domain.rs  mask.rs  mod.rs  test_backend_claude.rs  test_backend_codex.rs  test_domain.rs  test_types.rs  types.rs
src-tauri/src/gateway/middleware/: test_mod.rs
src-tauri/src/gateway/mitm/: ca.rs  cert_signer.rs  mod.rs  whitelist.rs
src-tauri/src/gateway/models/: group.rs  middleware.rs  mod.rs  platform.rs  price.rs  protocol.rs  proxy_log.rs  test_middleware.rs  test_settings.rs
(+3387 files in other folders)
