[package]
name = "aidog"
version = "0.1.0"
description = "AiDog Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "aidog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-rusqlite = { version = "0.6", features = ["bundled"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "io-util"] }
axum = { version = "0.8", features = ["json"] }
reqwest = { version = "0.12", features = ["stream", "json", "socks"] }
tower = "0.5"
futures = "0.3"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"

# macOS 托盘小字：直接操作 NSStatusItem button 的 attributedTitle（NSAttributedString + 小号 NSFont）。
# 版本与 Tauri 2.11 内部依赖对齐（tauri 透传 tray_icon::TrayIcon，其 ns_status_item() 返回 objc2-app-kit NSStatusItem）。
# Tauri minor 升级可能更新 tray-icon → 需同步本处版本。
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSDictionary", "NSAttributedString", "NSGeometry", "NSValue"] }
objc2-app-kit = { version = "0.3", features = ["NSStatusItem", "NSStatusBarButton", "NSButton", "NSControl", "NSResponder", "NSView", "NSFont", "NSParagraphStyle", "NSAttributedString", "NSColor", "objc2-core-foundation"] }

