[package]
name = "commands_ai_tools"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

# C7 commands-ai-tools：coding_tools/mcp/skills/script_executor/model_test 5 域 command。
# 铁律：禁依赖其他 commands_* crate（跨域边下沉 aidog_core）。
[dependencies]
aidog_core = { path = "../aidog_core" }
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
aidog_test_util = { path = "../aidog_test_util" }
tauri = { workspace = true, features = ["test"] }
tokio = { workspace = true }
